canvas 系列-绚丽时钟

--- a/html5/canvas/physics/index.html
+++ b/html5/canvas/physics/index.html
@@ -54,7 +54,7 @@
 				if(ball.y>=400-ball.r){
 					ball.y=400-ball.r;
 					ball.vy=-ball.vy*0.7;
-					ball.vx*=0.95;  //使得让球在中间停下来成为可能
+					ball.vx*=0.95;  //空气阻力
 				}
 
 				//碰到左壁反弹
