--- a/html5/canvas/clock/index.html
+++ b/html5/canvas/clock/index.html
@@ -3,17 +3,11 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Canvas做倒计时时钟</title>
-		<style type="text/css">
-				#canvas{
-					border:1px solid #ddd;
-					display: block;
-					margin: 20px auto;
-				}
-		</style>
 	</head>
-	<body>
-		
-		<canvas id="canvas"></canvas>
+	<body style="height:100%">
+	    <canvas id="canvas" style="height:100%">
+	        当前浏览器不支持Canvas，请更换浏览器后再试
+	    </canvas>
 		<script type="text/javascript" src="js/digit.js"></script>
 		<!-- digit.js存放二维的点阵模型-->
 		<script type="text/javascript" src="js/countdown.js"></script>
